--- a/PolyRenderer/PolyRenderer.vcxproj.filters
+++ b/PolyRenderer/PolyRenderer.vcxproj.filters
@@ -54,5 +54,11 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="VecMath.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
